# zfuzz

./: Cargo.toml  LICENSE  Makefile  README.md  design.md
notes/.obsidian/: workspace.json
notes/benchmarks/benchmark_empty/: README.md
src/: arg_setup.rs  config.rs  configurables.rs  emulator.rs  execution_state.rs  hooks.rs  lib.rs  main.rs  mutator.rs  pretty_printing.rs  syscalls.rs
src/targets/: target_2.rs  targets.rs
test_cases/: hello  hello.c
tools/: binja_highlight_cov.py  binja_remove_cov_highlights.py  binja_syscalls.py  snapshot.py  trace_full_regs.sh
writeup/: conclusion.md  design.md  overview.md  usage.md
