[package]
name = "zfuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elfparser = { path = "/home/seal/github/local_crates/elfparser" }
unicorn-engine = { path = "/home/seal/opt/unicorn" }
rustc-hash = "1.1.0"
byteorder = "1.4.3"
clap = { version = "3.1.18", features = ["derive"] }
parse_int = "0.6.0"
